--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+git config --global user.email "shafaqtariq238@gmail.com"
+  git config --global user.name "Shafaq"
